k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: armenantonyan/my-image:latest
        # image: nginx:latest
        ports:
        - name: http-nginx
          containerPort: 80
