k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports:
    - name: http-nginx
      protocol: TCP
      port: 80
      targetPort: http-nginx
